// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-kaWNwR {
    border-collapse: collapse;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-cLtPph {
    background: var(--colors-primaryDark);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dUiGek {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  tr:nth-child(odd) .c-dUiGek {
    background: white;
  }

  tr:nth-child(even) .c-dUiGek {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-kaWNwR-bPSqIf-size-md .c-dUiGek {
    height: var(--sizes-4);
  }

  .c-kaWNwR-bPSqIf-size-md .c-cLtPph {
    height: var(--sizes-4);
  }
}

@media  {
  .c-kaWNwR-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-kaWNwR c-kaWNwR-bPSqIf-size-md c-kaWNwR-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-cLtPph"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dUiGek"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dUiGek"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-kaWNwR {
    border-collapse: collapse;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-cLtPph {
    background: var(--colors-primaryDark);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dUiGek {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  tr:nth-child(odd) .c-dUiGek {
    background: white;
  }

  tr:nth-child(even) .c-dUiGek {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-kaWNwR-bPSqIf-size-md .c-dUiGek {
    height: var(--sizes-4);
  }

  .c-kaWNwR-bPSqIf-size-md .c-cLtPph {
    height: var(--sizes-4);
  }

  .c-kaWNwR-eWeWTj-size-lg .c-dUiGek {
    height: var(--sizes-5);
  }

  .c-kaWNwR-eWeWTj-size-lg .c-cLtPph {
    height: var(--sizes-5);
  }
}

@media  {
  .c-kaWNwR-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-kaWNwR c-kaWNwR-eWeWTj-size-lg c-kaWNwR-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-cLtPph"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dUiGek"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dUiGek"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
